[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
authors = ["Akira Yamamoto <ak-yamamoto@k-bokka.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
image = "0.24.3"
crossbeam = "0.8.2"
num_cpus = "1.13.1"
